New user Css finished

--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -26,14 +26,14 @@
                     placeholder="BirthDate">
               </div>
               <div class="input-group mb-2">
-                  <span class="input-group-text"><i class="fa fa-at" aria-hidden="true"></i></span>
+                  <span class="input-group-text"><i class="fa fa-at fa-fw" aria-hidden="true"></i></span>
                   <input type="email" name="email" class="form-control bg-body-secondary"
                     placeholder="Email">
               </div>
               <div class="input-group mb-2">
-                  <span class="input-group-text"><i class="fa fa-commenting fa-fw" aria-hidden="true"></i></span>
-                  <input type="text" name="comments" class="form-control bg-body-secondary"
-                    placeholder="Comments">
+                  <span class="input-group-text"><i class="fa fa-lock fa-fw" aria-hidden="true"></i></span>
+                  <input type="password" name="password" class="form-control bg-body-secondary"
+                    placeholder="Password">
               </div>
                 <button type="submit" class="login btn btn-primary rounded-pill text-white mb-5 border-0 fw-normal row justify-content-center">Create</button>
         </form>
