Edit User errors

--- a/views/trips/new.hbs
+++ b/views/trips/new.hbs
@@ -1,4 +1,8 @@
-
+{{#if errors}}
+  <div class="alert alert-danger">
+    review form data
+  </div>
+{{/if}}
 
 <div class="row mx-auto justify-content-center pt-25" style="width: 100%;">
   <div class="col-12 col-md-4 row justify-content-center">
