Add Departure Time of a trip

--- a/views/trips/book.hbs
+++ b/views/trips/book.hbs
@@ -4,6 +4,7 @@
   <ul class="list-group list-group-flush">
     <li class="list-group-item border-0">{{trip.from}}</li>
     <li class="list-group-item">{{trip.to}}</li>
+    <li class="list-group-item">{{trip.departureTime}}</li>
     <li class="list-group-item border-bottom border-top border-5">Price: {{trip.price}}€</li>
   </ul>
 </div>
