--- a/views/trips/detail.hbs
+++ b/views/trips/detail.hbs
@@ -6,6 +6,7 @@
     <img class="rounded-circle mt-1" src="{{trip.user.image}}" alt="user" width="28px" height="28px">
     <li class="list-group-item border-0">{{trip.from}}</li>
     <li class="list-group-item">{{trip.to}}</li>
+    <li class="list-group-item">{{trip.departureTime}}</li>
     <li class="list-group-item border-bottom border-top border-5">Price: {{trip.price}}€</li>
     <li class="list-group-item border-0" style="width: 80%;">{{trip.user.user}}</li>
     <li class="list-group-item">Escribir a {{trip.user.user}}</li>
