--- a/views/trips/list.hbs
+++ b/views/trips/list.hbs
@@ -9,6 +9,7 @@
       <div class="card-body">
         <li>{{trip.from}}</li>
         <li>{{trip.to}}</li>
+        <li>{{trip.departureTime}}</li>
         <li>{{#isTripComplete trip}} Complete {{else}} Price: {{trip.price}}€ {{/isTripComplete}}</li>
         <li>Seats: {{trip.seats}}</li>
         <li>{{trip.user.user}}</li>
