--- a/views/trips/edit.hbs
+++ b/views/trips/edit.hbs
@@ -1,4 +1,3 @@
-<h1>Update trip</h1>
 
 {{#if errors}}
   <div class="alert alert-danger">
@@ -6,36 +5,59 @@
   </div>
 {{/if}}
 
-<form action="/trips/{{trip.id}}" method="POST">
-    <div class="mb-3">
-      <label for="from" class="form-label">From</label>
-      <input type="text" value="{{trip.from}}" name="from" id="from" class="form-control {{#if errors.from}}is-invalid{{/if}}" placeholder="From City">
-        {{#if errors.from}}<div class="invalid-feedback">{{errors.from}}</div>{{/if}}
+
+<div class="row mx-auto justify-content-center pt-25" style="width: 100%;">
+  <div class="col-12 col-md-4 row justify-content-center">
+     <h1 class="fs-25 mt-25">Update Trip</h1>
+    <div class="card border-0">
+      <div class="card-body">
+        <form action="/trips/{{trip.id}}" method="POST">
+          <div class="mb-3">
+            <div class="input-group mb-2">
+                  <span class="input-group-text"><i class="fa fa-map-marker fa-fw" aria-hidden="true"></i></span>
+                  <input type="from" value="{{trip.from}}" name="from" class="form-control bg-body-secondary {{#if errors.from}}is-invalid{{/if}}"
+                    placeholder="From">
+                    {{#if errors.from}}<div class="invalid-feedback">{{errors.from}}</div>{{/if}}
+              </div>
+              <div class="input-group mb-2">
+                  <span class="input-group-text"><i class="fa fa-map-marker fa-fw" aria-hidden="true"></i></span>
+                  <input type="text" value="{{trip.to}}" name="to" class="form-control bg-body-secondary {{#if errors.to}}is-invalid{{/if}}"
+                    placeholder="To">
+                    {{#if errors.to}}<div class="invalid-feedback">{{errors.to}}</div>{{/if}}
+              </div>
+              <div class="input-group mb-2">
+                  <span class="input-group-text"><i class="fa fa-clock-o fa-fw" aria-hidden="true"></i></span>
+                  <input type="time" value="{{trip.departureTime}}" name="departureTime" class="form-control bg-body-secondary {{#if errors.departureTime}}is-invalid{{/if}}"
+                    placeholder="Departure Time">
+                    {{#if errors.departureTime}}<div class="invalid-feedback">{{errors.departureTime}}</div>{{/if}}
+              </div>
+              <div class="input-group mb-2">
+                  <span class="input-group-text"><i class="fa fa-money fa-fw" aria-hidden="true"></i></span>
+                  <input type="number" value="{{trip.price}}" name="price" class="form-control bg-body-secondary {{#if errors.price}}is-invalid{{/if}}"
+                    placeholder="Price">
+                    {{#if errors.price}}<div class="invalid-feedback">{{errors.price}}</div>{{/if}}
+              </div>
+              <div class="input-group mb-2">
+                  <span class="input-group-text"><i class="fa fa-calendar fa-fw" aria-hidden="true"></i></span>
+                  <input type="date" value="{{trip.date}}" name="date" class="form-control bg-body-secondary{{#if errors.date}}is-invalid{{/if}}"
+                    placeholder="Date">
+                    {{#if errors.date}}<div class="invalid-feedback">{{errors.date}}</div>{{/if}}
+              </div>
+              <div class="input-group mb-2">
+                  <span class="input-group-text"><i class="fa fa-car fa-fw" aria-hidden="true"></i></span>
+                  <input type="number" value="{{trip.seats}}" name="seats" class="form-control bg-body-secondary {{#if errors.seats}}is-invalid{{/if}}"
+                    placeholder="Seats">
+                    {{#if errors.seats}}<div class="invalid-feedback">{{errors.seats}}</div>{{/if}}
+              </div>
+              <div class="input-group mb-2">
+                  <span class="input-group-text"><i class="fa fa-commenting fa-fw" aria-hidden="true"></i></span>
+                  <input type="text" value="{{trip.comments}}" name="comments" class="form-control bg-body-secondary {{#if errors.comments}}is-invalid{{/if}}"
+                    placeholder="Comments">
+                    {{#if errors.comments}}<div class="invalid-feedback">{{errors.comments}}</div>{{/if}}
+              </div>
+                <button type="submit" class="login btn btn-primary rounded-pill text-white mb-5 border-0 fw-normal row justify-content-center">Create</button>
+        </form>
+      </div>
     </div>
-    <div class="mb-3">
-      <label for="to" class="form-label">To</label>
-      <input type="text" value="{{trip.to}}" name="to" id="to" class="form-control {{#if errors.to}}is-invalid{{/if}}" placeholder="Destiny City">
-        {{#if errors.to}}<div class="invalid-feedback">{{errors.to}}</div>{{/if}}
-    </div>
-    <div class="mb-3">
-      <label for="price" class="form-label">Price</label>
-      <input type="number" value="{{trip.price}}" name="price" id="price" class="form-control {{#if errors.price}}is-invalid{{/if}}" placeholder="Price">
-        {{#if errors.price}}<div class="invalid-feedback">{{errors.price}}</div>{{/if}}
-    </div>
-    <div class="mb-3">
-      <label for="date" class="form-label">Date</label>
-      <input type="date" value="{{trip.date}}" name="date" id="date" class="form-control {{#if errors.date}}is-invalid{{/if}}" placeholder="Date">
-        {{#if errors.date}}<div class="invalid-feedback">{{errors.date}}</div>{{/if}}
-    </div>
-    <div class="mb-3">
-      <label for="seats" class="form-label">Seats</label>
-      <input type="number" value="{{trip.seats}}" name="seats" id="seats" class="form-control {{#if errors.seats}}is-invalid{{/if}}" placeholder="Seats">
-        {{#if errors.seats}}<div class="invalid-feedback">{{errors.seats}}</div>{{/if}}
-    </div>
-    <div class="mb-3">
-      <label for="comments" class="form-label">Comments</label>
-      <input type="text" value="{{trip.comments}}" name="comments" id="comments" class="form-control {{#if errors.comments}}is-invalid{{/if}}" placeholder="Comments">
-        {{#if errors.comments}}<div class="invalid-feedback">{{errors.comments}}</div>{{/if}}
-    </div>
-    <button type="submit" class="btn btn-primary">Update</button>
-</form>
+  </div>
+</div>
