--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -22,11 +22,18 @@
   <body>
     {{>navbar}}
     {{{body}}}
+
     {{! Bootstrap Script  }}
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
+
+    {{! Google Maps Script  }}
+    <script src="/js/g-places.js"></script>
+    <script async
+    src="https://maps.googleapis.com/maps/api/js?key={{googleApiKey}}&libraries=places&callback=initGooglePlaces">
+    </script>
   </body>
 </html>
