--- a/views/commons/home.hbs
+++ b/views/commons/home.hbs
@@ -21,6 +21,12 @@
           ></path></svg>
       </div>
       <p class="p-2">Leaving from...</p>
+      <div class="input-group mb-3">
+        <label class="input-group-text" for="from"><i class="fa fa-globe"></i></label>
+        <input type="text" name="from" class="form-control g-places-finder {{#if errors.address}}is-invalid{{/if}}" id="address" value="{{trip.from}}">
+      </div>
+      <input type="hidden" name="lat" value="{{trip.lat}}">
+      <input type="hidden" name="lng" value="{{trip.lng}}">
     </div>
     <div class="border-bottom"></div>
     <div class="mt-2 d-flex flex-row">
