Ratings MVC fixed name

--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -1,7 +1,7 @@
 
 <div class="d-flex justify-content-evenly border-bottom mb-5 pt-3">
   <a class="text-decoration-none text-dark fw-bold" href="/profile">About You</a>
-  <a class="text-decoration-none text-dark fw-bold" href="/profile/account">Ratings</a>
+  <a class="text-decoration-none text-dark fw-bold" href="/profile/ratings">Ratings</a>
 </div>
 
 
