--- a/views/users/ratings.hbs
+++ b/views/users/ratings.hbs
@@ -1,7 +1,7 @@
 
 <div class="d-flex justify-content-evenly border-bottom mb-5 pt-3">
   <a class="text-decoration-none text-dark fw-bold" href="/profile">About You</a>
-  <a class="text-decoration-none text-dark fw-bold" href="/profile/account">Ratings</a>
+  <a class="text-decoration-none text-dark fw-bold" href="/profile/ratings">Ratings</a>
 </div>
 
 <div class="mb-3 d-flex align-items-center flex-column">
@@ -33,7 +33,7 @@
        Rate: {{r.rating}}
     </li>
     <li>
-      Observations {{r.observations}}
+      Observations: {{r.observations}}
     </li>
   </ul>
 {{/each}}
