--- a/views/commons/home.hbs
+++ b/views/commons/home.hbs
@@ -20,13 +20,13 @@
             fill="#708C91"
           ></path></svg>
       </div>
-      <p class="p-2">Leaving from...</p>
       <div class="input-group mb-3">
-        <label class="input-group-text" for="from"><i class="fa fa-globe"></i></label>
-        <input type="text" name="from" class="form-control g-places-finder {{#if errors.address}}is-invalid{{/if}}" id="address" value="{{trip.from}}">
+          <input type="from" value="{{trip.from}}" name="from" class="form-control fs-5 g-places-finder  text-secondary border-0 {{#if errors.from}}is-invalid{{/if}}"
+            placeholder="Leaving from...">
+            {{#if errors.from}}<div class="invalid-feedback">{{errors.from}}</div>{{/if}}
       </div>
-      <input type="hidden" name="lat" value="{{trip.lat}}">
-      <input type="hidden" name="lng" value="{{trip.lng}}">
+        <input type="hidden" name="latFrom" value="{{trip.latFrom}}">
+        <input type="hidden" name="lngFrom" value="{{trip.lngFrom}}">
     </div>
     <div class="border-bottom"></div>
     <div class="mt-2 d-flex flex-row">
@@ -45,8 +45,16 @@
             fill="#708C91"
           ></path></svg>
       </div>
-      <p class="p-2">Going to...</p>
+    
+    <div class="input-group mb-3">
+        <input type="to" value="{{trip.to}}" name="to" class="form-control fs-5 g-places-finder text-secondary border-0 {{#if errors.to}}is-invalid{{/if}}"
+          placeholder="Going to...">
+          {{#if errors.to}}<div class="invalid-feedback">{{errors.to}}</div>{{/if}}
     </div>
+    <input type="hidden" name="latTo" value="{{trip.latTo}}">
+    <input type="hidden" name="lngTo" value="{{trip.lngTo}}">
+    </div>
+
     <div class="border-bottom"></div>
     <div class="d-flex mt-1 mb-1">
       <div class="p-2 flex-grow-1">
