Average of ratings Done

--- a/views/users/ratings.hbs
+++ b/views/users/ratings.hbs
@@ -15,6 +15,13 @@
   </div>
 </div>
 
+<div>
+  <h1>{{ratingAverage currentUser.receivedRatings}}/5</h1>
+  <small>
+    {{currentUser.receivedRatings.length}} Ratings
+  </small>
+</div>
+
 
 <div class="mb-3 d-flex align-items-center flex-column">
   <div class="d-flex justify-content-between mb-2"  style="width: 88%;">
