Message Controller & View

--- a/views/trips/detail.hbs
+++ b/views/trips/detail.hbs
@@ -31,6 +31,11 @@
     href="/trips/{{trip.id}}/book"
   >Continue</a>
 
+  <a
+    class="publish btn btn-primary rounded-pill text-white mb-5 border-0 fw-normal"
+    href="/users/{{trip.user.id}}/chat"
+  >Chat</a>
+
 
 
 
