--- a/views/messages/chat.hbs
+++ b/views/messages/chat.hbs
@@ -4,14 +4,27 @@
      <h1 class="fs-25 mt-25">New Message</h1>
     <div class="card border-0">
       <div class="card-body">
-        <form action="/users/{{userId}}/message" method="POST">
+
+     
+
+        {{#each messages as | message |}}
+        <ul>
+            <li>From : {{message.from.name}}</li>
+            <li>{{message.message}}</li>
+        </ul>
+        {{/each}}
+
+
+
+
+        <form action="/users/{{userId}}/chat" method="POST">
           <div class="mb-3">
               <div class="input-group mb-2">
                   <span class="input-group-text"><i class="fa fa-commenting fa-fw" aria-hidden="true"></i></span>
-                    <textarea type="text" name="observations" class="form-control bg-body-secondary"
-                    placeholder="Comments"></textarea>
+                    <textarea type="text" name="message" class="form-control bg-body-secondary"
+                    placeholder="Message"></textarea>
               </div>
-                <button type="submit" class="login btn btn-primary rounded-pill text-white mb-5 border-0 fw-normal row justify-content-center">Message</button>
+                <button type="submit" class="login btn btn-primary rounded-pill text-white mb-5 border-0 fw-normal row justify-content-center">Send</button>
         </form>
       </div>
     </div>
