--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -14,37 +14,37 @@
           <div class="mb-3">
             <div class="input-group mb-2">
                   <span class="input-group-text"><i class="fa fa-user fa-fw" aria-hidden="true"></i></span>
-                  <input type="user" name="user" class="form-control bg-body-secondary {{#if errors.user}}is-invalid{{/if}}"
+                  <input type="user" name="user" value="{{user.user}}" class="form-control bg-body-secondary {{#if errors.user}}is-invalid{{/if}}"
                     placeholder="User">
                     {{#if errors.user}}<div class="invalid-feedback">{{errors.user}}</div>{{/if}}
               </div>
               <div class="input-group mb-2">
                   <span class="input-group-text"><i class="fa fa-id-card-o fa-fw" aria-hidden="true"></i></span>
-                  <input type="text" name="name" class="form-control bg-body-secondary {{#if errors.name}}is-invalid{{/if}}"
+                  <input type="text" name="name" value="{{user.name}}" class="form-control bg-body-secondary {{#if errors.name}}is-invalid{{/if}}"
                     placeholder="Name">
                     {{#if errors.name}}<div class="invalid-feedback">{{errors.name}}</div>{{/if}}
               </div>
               <div class="input-group mb-2">
                   <span class="input-group-text"><i class="fa fa-id-card fa-fw" aria-hidden="true"></i></span>
-                  <input type="text" name="lastName" class="form-control bg-body-secondary {{#if errors.lastName}}is-invalid{{/if}}"
+                  <input type="text" name="lastName" value="{{user.lastName}}"  class="form-control bg-body-secondary {{#if errors.lastName}}is-invalid{{/if}}"
                     placeholder="Last Name">
                     {{#if errors.lastName}}<div class="invalid-feedback">{{errors.lastName}}</div>{{/if}}
               </div>
               <div class="input-group mb-2">
                   <span class="input-group-text"><i class="fa fa-calendar fa-fw" aria-hidden="true"></i></span>
-                  <input type="date" name="birthDate" class="form-control bg-body-secondary {{#if errors.birthdate}}is-invalid{{/if}}"
+                  <input type="date" name="birthDate" value="{{user.birthDate}}"  class="form-control bg-body-secondary {{#if errors.birthdate}}is-invalid{{/if}}"
                     placeholder="BirthDate">
                     {{#if errors.birthdate}}<div class="invalid-feedback">{{errors.birthdate}}</div>{{/if}}
               </div>
               <div class="input-group mb-2">
                   <span class="input-group-text"><i class="fa fa-at fa-fw" aria-hidden="true"></i></span>
-                  <input type="email" name="email" class="form-control bg-body-secondary {{#if errors.email}}is-invalid{{/if}}"
+                  <input type="email" name="email" value="{{user.email}}"  class="form-control bg-body-secondary {{#if errors.email}}is-invalid{{/if}}"
                     placeholder="Email">
                     {{#if errors.email}}<div class="invalid-feedback">{{errors.email}}</div>{{/if}}
               </div>
               <div class="input-group mb-2">
                   <span class="input-group-text"><i class="fa fa-lock fa-fw" aria-hidden="true"></i></span>
-                  <input type="password" name="password" class="form-control bg-body-secondary {{#if errors.password}}is-invalid{{/if}}"
+                  <input type="password" name="password" value="{{user.password}}"  class="form-control bg-body-secondary {{#if errors.password}}is-invalid{{/if}}"
                     placeholder="Password">
                     {{#if errors.password}}<div class="invalid-feedback">{{errors.password}}</div>{{/if}}
               </div>
