--- a/views/users/rides.hbs
+++ b/views/users/rides.hbs
@@ -3,7 +3,28 @@
 <p>Find the perfect ride from thousands of destinations, or publish to share your travel costs.</p>
 
 
+<h1>Driver</h1>
+<div class="d-flex align-items-center flex-column">
+  {{#each currentUser.adquiredTrips as | trip | }}
+    <div
+      class="card mb-2 border-1 rounded-4 shadow nav-link"
+      style="width: 90%;"
+      href="/trips/{{trip.id}}"
+    >
+      <div class="card-body">
+        <li>{{trip.from}}</li>
+        <li>{{trip.to}}</li>
+        <li>Price: {{trip.price}}€</li>
+        <li>Seats: {{trip.seats}}</li>
+        <li>{{trip.user.user}}</li>
+        <a class="btn btn-primary" href="/users/{{trip.user.id}}/rating">Rate</a>
+      </div>
+    </div>
+  {{/each}}
+</div>
 
+
+<h1>Passenger</h1>
 <div class="d-flex align-items-center flex-column">
   {{#each currentUser.adquiredTrips as | trip | }}
     <div
