--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -105,3 +105,25 @@ body {
   font-size: 82px;
   color: #054752;
 }
+
+.travel-icon {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-items: center;
+}
+
+.travel-icon-line {
+  background-color: rgb(5, 71, 82);
+  width: 4px;
+  height: 50px;
+  margin: -1px 0;
+}
+
+.travel-icon-circle {
+  border-radius: 50%;
+    height: 10px;
+    width: 10px;
+    border: 2px solid rgb(5, 71, 82);
+
+}
