--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -12,10 +12,8 @@
       {{#if currentUser.user}}
       <li><a class="dropdown-item" href="/trips/new">Offer a ride</a></li>
       <li><a class="dropdown-item" href="/profile/rides">Your rides</a></li>
-      <li><a class="dropdown-item" href="/profile/inbox">Inbox</a></li>
+      <li><a class="dropdown-item" href="/inbox">Inbox</a></li>
       <li><a class="dropdown-item" href="/profile">Profile</a></li>
-      <li><a class="dropdown-item" href="/profile/transfers">Transfers</a></li>
-      <li><a class="dropdown-item" href="/profile/payments">Payments & refunds</a></li>
       <li><a class="dropdown-item" href="/logout">Log out</a></li>
       {{else}}
       <li><a class="dropdown-item" href="/login">Log In</a></li>
