--- a/views/users/edit.hbs
+++ b/views/users/edit.hbs
@@ -1,3 +1,4 @@
+
 {{#if errors}}
   <div class="alert alert-danger">
     review form data
@@ -5,38 +6,48 @@
 {{/if}}
 
 
-<h1>Edit User</h1>
-
-
-<form action="/profile/{{currentUser.id}}" method="POST" enctype="multipart/form-data">
-    <div class="mb-3">
-      <label for="user" class="form-label">User</label>
-      <input type="text" value="{{currentUser.user}}" name="user" id="user" class="form-control {{#if errors.user}}is-invalid{{/if}}" placeholder="User">
-      {{#if errors.user}}<div class="invalid-feedback">{{errors.user}}</div>{{/if}}
+<div class="row mx-auto justify-content-center pt-25" style="width: 100%;">
+  <div class="col-12 col-md-4 row justify-content-center">
+     <h1 class="fs-25 mt-25">Edit User</h1>
+    <div class="card border-0">
+      <div class="card-body">
+        <form action="/profile/{{currentUser.id}}" method="POST" enctype="multipart/form-data">
+          <div class="mb-3">
+            <div class="input-group mb-2">
+                  <span class="input-group-text"><i class="fa fa-user fa-fw" aria-hidden="true"></i></span>
+                  <input type="user" name="user" value="{{currentUser.user}}" class="form-control bg-body-secondary {{#if errors.user}}is-invalid{{/if}}"
+                    placeholder="User">
+                    {{#if errors.user}}<div class="invalid-feedback">{{errors.user}}</div>{{/if}}
+              </div>
+              <div class="input-group mb-2">
+                  <span class="input-group-text"><i class="fa fa-id-card-o fa-fw" aria-hidden="true"></i></span>
+                  <input type="text" name="name" value="{{currentUser.name}}" class="form-control bg-body-secondary {{#if errors.name}}is-invalid{{/if}}"
+                    placeholder="Name">
+                    {{#if errors.name}}<div class="invalid-feedback">{{errors.name}}</div>{{/if}}
+              </div>
+              <div class="input-group mb-2">
+                  <span class="input-group-text"><i class="fa fa-id-card fa-fw" aria-hidden="true"></i></span>
+                  <input type="text" name="lastName" value="{{currentUser.lastName}}"  class="form-control bg-body-secondary {{#if errors.lastName}}is-invalid{{/if}}"
+                    placeholder="Last Name">
+                    {{#if errors.lastName}}<div class="invalid-feedback">{{errors.lastName}}</div>{{/if}}
+              </div>
+              <div class="input-group mb-2">
+                  <span class="input-group-text"><i class="fa fa-calendar fa-fw" aria-hidden="true"></i></span>
+                  <input type="date" name="birthDate" value="{{currentUser.birthDate}}"  class="form-control bg-body-secondary {{#if errors.birthdate}}is-invalid{{/if}}"
+                    placeholder="BirthDate">
+                    {{#if errors.birthdate}}<div class="invalid-feedback">{{errors.birthdate}}</div>{{/if}}
+              </div>
+              <div class="input-group mb-2">
+                <label for="image" class="form-label">Profile Image</label>
+                <img id="image" class="m-2 rounded-circle" src="{{currentUser.image}}" width="200"/>
+                <input type="file" value="{{currenUser.image}}" name="image" id="image" class="form-control">
+              </div>
+                <button type="submit" class="login btn btn-primary rounded-pill text-white mb-5 border-0 fw-normal row justify-content-center">Update</button>
+        </form>
+      </div>
     </div>
-    <div class="mb-3">
-      <label for="name" class="form-label">Name</label>
-      <input type="text" value="{{currentUser.name}}" name="name" id="name" class="form-control {{#if errors.name}}is-invalid{{/if}}" placeholder="Name">
-      {{#if errors.name}}<div class="invalid-feedback">{{errors.name}}</div>{{/if}}
-    </div>
-    <div class="mb-3">
-      <label for="lastName" class="form-label">Last Name</label>
-      <input type="text" value="{{currentUser.lastName}}" name="lastName" id="lastName" class="form-control {{#if errors.lastName}}is-invalid{{/if}}" placeholder="Last Name">
-      {{#if errors.lastName}}<div class="invalid-feedback">{{errors.lastName}}</div>{{/if}}
-    </div>
-    <div class="mb-3">
-      <label for="birthdate" class="form-label">Birthdate</label>
-      <input type="date" value="{{currenUser.birthdate}}" name="birthdate" id="birthdate" class="form-control {{#if errors.birthdate}}is-invalid{{/if}}">
-      {{#if errors.birthdate}}<div class="invalid-feedback">{{errors.birthdate}}</div>{{/if}}
-    </div>
-    <div class="mb-3">
-      <label for="image" class="form-label">Profile Image</label>
-      <img id="image" class="m-2 rounded-circle" src="{{currentUser.image}}" width="200"/>
-      <input type="file" value="{{currenUser.image}}" name="image" id="image" class="form-control">
-    </div>
-    </div>
-    <button type="submit" class="btn btn-primary">Update</button>
-</form>
+  </div>
+</div>
 
 
 {{!-- <script>
