--- a/views/messages/chat.hbs
+++ b/views/messages/chat.hbs
@@ -1,30 +1,33 @@
 
 <div class="row mx-auto justify-content-center pt-25" style="width: 100%;">
   <div class="col-12 col-md-4 row justify-content-center">
-     <h1 class="fs-25 mt-25">New Message</h1>
+     <h1 class="fs-25 mt-25">Chat</h1>
     <div class="card border-0">
       <div class="card-body">
 
-     
-
         {{#each messages as | message |}}
-        <ul>
-            <li>From : {{message.from.name}}</li>
-            <li>{{message.message}}</li>
-        </ul>
+        <div class="mb-3 d-flex align-items-center mx-auto flex-column mb-5">
+          <div class="d-flex flex-row justify-content-evenly mr-2"  style="width: 100%;">
+            <div class="mt-4 mr-2">
+              {{message.from.name}}
+            </div>
+            <div>
+              <img class="rounded-circle mt-2" src="{{#if message.from.image}} {{message.from.image}} {{else}}https://cdn.blablacar.com/kairos/assets/images/default-m-818bf2b20d4b06a052dd..svg{{/if}}" alt="profile" width="60px" height="60px">
+            </div>
+          </div>
+          <div >
+            <textarea class="badge bg-secondary fs-5 text-wrap" style="width: 12rem; height: 2rem;" rows="10">{{message.message}}</textarea>
+          </div>
+        </div>
         {{/each}}
 
-
-
-
         <form action="/users/{{userId}}/chat" method="POST">
-          <div class="mb-3">
+          <div class="mb-5">
               <div class="input-group mb-2">
                   <span class="input-group-text"><i class="fa fa-commenting fa-fw" aria-hidden="true"></i></span>
-                    <textarea type="text" name="message" class="form-control bg-body-secondary"
-                    placeholder="Message"></textarea>
+                  <textarea type="text" name="message" rows="1" class="form-control bg-body-secondary" value="{{query.search}}"></textarea>
+                  <button type="submit" class="btn btn-outline-secondary"><i class="fa fa-paper-plane fa-fw" aria-hidden="true"></i></button>
               </div>
-                <button type="submit" class="login btn btn-primary rounded-pill text-white mb-5 border-0 fw-normal row justify-content-center">Send</button>
         </form>
       </div>
     </div>
