--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -18,7 +18,7 @@
 
 <div class="anchors mb-3 border-bottom d-flex align-items-start flex-column">
   <div class="mb-4">
-    <a class="signUp text-decoration-none ml-3" href="/photo">Edit profile picture</a>
+    <a class="signUp text-decoration-none ml-3" href="/profile/{{currentUser.id}}/edit/picture">Edit profile picture</a>
   </div>
   <div class="mb-4">
     <a class="signUp text-decoration-none ml-3" href="/profile/{{currentUser.id}}/edit">Edit personal Details</a>
