PathActive helper for Profile page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -138,6 +138,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   margin-right: 10px;
 }
 
-.kirk-icon {
+.homeSeats {
     margin-left: 10px;
 }
