--- a/views/commons/home.hbs
+++ b/views/commons/home.hbs
@@ -124,7 +124,7 @@
           <svg
             viewBox="0 0 19 20"
             xmlns="http://www.w3.org/2000/svg"
-            class="kirk-icon sc-ksBlkl Jvfzv mt-2"
+            class="kirk-icon homeSeats sc-ksBlkl Jvfzv mt-2"
             width="18"
             height="18"
             aria-hidden="true"
