--- a/views/users/ratings.hbs
+++ b/views/users/ratings.hbs
@@ -12,7 +12,6 @@
   </small>
 </div>
 <div class="border-bottom border-5 mb-4" style="width: 100%;"></div>
-
 <div class="mb-3 d-flex align-items-center flex-column">
   <div class="d-flex justify-content-between mb-2"  style="width: 88%;">
     <div>
@@ -20,12 +19,9 @@
     </div>
   </div>
 </div>
-
-
-
 {{#each currentUser.receivedRatings as |r|}}
-<div class="mb-3 d-flex align-items-center flex-column">
-  <div class="d-flex justify-content-between mb-2"  style="width: 80%;">
+<div class="mb-3 d-flex align-items-center border-top border-bottom flex-column">
+  <div class="d-flex justify-content-between mb-1"  style="width: 80%;">
     <div>
       <h1 class="pl-20 fw-bold mt-4">{{r.sender.name}}</h1>
     </div>
@@ -33,15 +29,15 @@
       <img class="rounded-circle mt-2" src="{{#if currentUser.image}} {{r.sender.image}} {{else}}https://cdn.blablacar.com/kairos/assets/images/default-m-818bf2b20d4b06a052dd..svg{{/if}}" alt="profile" width="60px" height="60px">
     </div>
   </div>
-</div>
-<div class="card mx-auto border-0 border-bottom mb-5" style="width: 80%;">
+  <div class="card mx-auto border-0 mb-" style="width: 80%;">
     <h3>{{r.rating}}/5</h3>
      <p>{{r.observations}}</p>
 </div> 
+</div>
 {{/each}}
 
-<div class="border-bottom border-5 mb-4" style="width: 100%;"></div>
 
+<div class="border-bottom border-5 mb-4" style="width: 100%;"></div>
 <div class="mb-3 d-flex align-items-center flex-column">
   <div class="d-flex justify-content-between mb-2"  style="width: 88%;">
     <div>
@@ -49,12 +45,9 @@
     </div>
   </div>
 </div>
-
-
-
 {{#each currentUser.givenRatings as |r|}}
-<div class="mb-3 d-flex align-items-center flex-column">
-  <div class="d-flex justify-content-between mb-2"  style="width: 80%;">
+<div class="mb-3 d-flex align-items-center border-top border-bottom flex-column">
+  <div class="d-flex justify-content-between mb-1"  style="width: 80%;">
     <div>
       <h1 class="pl-20 fw-bold mt-4">{{r.user.name}}</h1>
     </div>
@@ -62,10 +55,10 @@
       <img class="rounded-circle mt-2" src="{{#if r.user.image}} {{r.user.image}} {{else}}https://cdn.blablacar.com/kairos/assets/images/default-m-818bf2b20d4b06a052dd..svg{{/if}}" alt="profile" width="60px" height="60px">
     </div>
   </div>
-</div>
- <div class="card mx-auto border-0 border-bottom mb-4" style="width: 80%;">
+  <div class="card mx-auto border-0 mb-" style="width: 80%;">
     <h3>{{r.rating}}/5</h3>
      <p>{{r.observations}}</p>
 </div> 
-
+</div>
 {{/each}}
+
