--- a/views/trips/finder.hbs
+++ b/views/trips/finder.hbs
@@ -26,7 +26,7 @@
       </div>
 
 
-<form action="/trips" method="get">
+ <form action="/trips" method="get">
         <div class="input-group mb-1">
             <input type="from" value="{{query.from}}" name="from" class="form-control fs-5 g-places-finder text-secondary border-0 {{#if errors.from}}is-invalid{{/if}}"
               placeholder="Leaving from...">
@@ -61,7 +61,7 @@
     <input type="hidden" name="latTo" value="{{query.latTo}}">
     <input type="hidden" name="lngTo" value="{{query.lngTo}}">
     </div>
-
+    
     <div class="border-bottom"></div>
     <div class="d-flex mt-1 mb-1">
       <div class="p-2 flex-grow-1">
@@ -69,7 +69,7 @@
           <svg
             viewBox="0 0 24 24"
             xmlns="http://www.w3.org/2000/svg"
-            class="kirk-icon sc-ksBlkl Jvfzv"
+            class="kirk-icon sc-ksBlkl Jvfzv mt-2"
             width="24"
             height="24"
             aria-hidden="true"
@@ -124,21 +124,23 @@
               {{#if errors.date}}<div class="invalid-feedback">{{errors.date}}</div>{{/if}}
         </div>
       </div>
-      <div class="flex-grow-1 p-2 border-start">
-        <svg
-          viewBox="0 0 19 20"
-          xmlns="http://www.w3.org/2000/svg"
-          class="kirk-icon sc-ksBlkl Jvfzv"
-          width="18"
-          height="18"
-          aria-hidden="true"
-        ><g fill="none"><path
-              d="M9.583 9.167a3.75 3.75 0 0 0 3.75-3.75v-.834a3.75 3.75 0 0 0-7.5 0v.834a3.75 3.75 0 0 0 3.75 3.75zm0 .833A4.584 4.584 0 0 1 5 5.417v-.834a4.584 4.584 0 0 1 9.167 0v.834A4.584 4.584 0 0 1 9.583 10zM18.333 17.007v1.743c0 .23-.186.417-.416.417H1.25a.417.417 0 0 1-.417-.417v-1.743a3.742 3.742 0 0 1 2.752-3.616c2.033-.554 4.08-.891 5.998-.891 1.92 0 3.966.337 5.998.891a3.742 3.742 0 0 1 2.752 3.616zm-.833 0a2.908 2.908 0 0 0-2.138-2.812c-1.967-.537-3.944-.862-5.779-.862-1.834 0-3.811.325-5.779.862a2.908 2.908 0 0 0-2.137 2.812v1.326H17.5v-1.326z"
-              fill="#708C91"
+      <div class="p-2 flex-grow-1">
+        <div class="mb-2 d-flex flex-grow border-start">
+          <svg
+            viewBox="0 0 19 20"
+            xmlns="http://www.w3.org/2000/svg"
+            class="kirk-icon homeSeats sc-ksBlkl Jvfzv mt-2"
+            width="18"
+            height="18"
+            aria-hidden="true"
+            ><g fill="none"><path
+            d="M9.583 9.167a3.75 3.75 0 0 0 3.75-3.75v-.834a3.75 3.75 0 0 0-7.5 0v.834a3.75 3.75 0 0 0 3.75 3.75zm0 .833A4.584 4.584 0 0 1 5 5.417v-.834a4.584 4.584 0 0 1 9.167 0v.834A4.584 4.584 0 0 1 9.583 10zM18.333 17.007v1.743c0 .23-.186.417-.416.417H1.25a.417.417 0 0 1-.417-.417v-1.743a3.742 3.742 0 0 1 2.752-3.616c2.033-.554 4.08-.891 5.998-.891 1.92 0 3.966.337 5.998.891a3.742 3.742 0 0 1 2.752 3.616zm-.833 0a2.908 2.908 0 0 0-2.138-2.812c-1.967-.537-3.944-.862-5.779-.862-1.834 0-3.811.325-5.779.862a2.908 2.908 0 0 0-2.137 2.812v1.326H17.5v-1.326z"
+            fill="#708C91"
             ></path></g></svg>
             <input type="number" value="{{query.seats}}" name="seats" class="form-control text-secondary border-0 {{#if errors.seats}}is-invalid{{/if}}"
               placeholder="Seats">
               {{#if errors.seats}}<div class="invalid-feedback">{{errors.seats}}</div>{{/if}}
+        </div>
       </div>
     </div>
   </div>
