--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -22,7 +22,7 @@
     </ul>
   </li>
   <div class="nav-item mt-1">
-    <a class="nav-link" href="/">
+    <a class="nav-link icon" href="/">
     <svg viewBox="0 0 1199.96 1014.39" width="33"><path
       fill="#054752"
       d="M1195.16 619.8c-31.2-184-205.8-308-390-276.8l54.4-308.3L662.96 0c-17 37-91 206-127 397 73.3 50 127 128.5 143 223 17.2 100.7-12.3 198.5-72.6 271.7 14.8 18 31.7 34.7 51 49.7 77 60.3 170.2 83.8 261 68.4 184-31.3 308-206 276.8-390z"
@@ -36,7 +36,7 @@
     </a>
   </div>
   <div class="nav-item d-flex justify-content-end mt-1">
-    <a class="nav-link  mr-3" href="/trips/finder">
+    <a class="nav-link lens" href="/trips/finder">
       <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="kirk-icon sc-ksBlkl eBMhlT mt-1" width="24" height="24" aria-hidden="true"><g fill="none" stroke="#00AFF5" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"><line x1="22" y1="22" x2="16.4" y2="16.4"></line><circle cx="10" cy="10" r="9"></circle></g>
       </svg>
     </a>
