--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -1,5 +1,5 @@
 
-<div class="d-flex justify-content-evenly mb-5 border-bottom pt-3">
+<div class="d-flex justify-content-evenly mb-5 border-bottom shadow-sm pt-3">
   <a class="text-decoration-none text-secondary {{#pathActive currentPath '/profile'}} text-decoration-none text-dark fw-bold{{/pathActive}}" href="/profile">About You</a>
   <a class="text-decoration-none text-secondary {{#pathActive currentPath '/profile/ratings'}} text-decoration-none text-dark fw-bold {{/pathActive}}" href="/profile/ratings">Ratings</a>
 </div>
