--- a/views/users/ratings.hbs
+++ b/views/users/ratings.hbs
@@ -1,7 +1,7 @@
 
-<div class="d-flex justify-content-evenly border-bottom mb-5 pt-3">
-  <a class="text-decoration-none text-dark fw-bold" href="/profile">About You</a>
-  <a class="text-decoration-none text-dark fw-bold" href="/profile/ratings">Ratings</a>
+<div class="d-flex justify-content-evenly mb-5 border-bottom shadow-sm pt-3">
+  <a class="text-decoration-none text-secondary {{#pathActive currentPath '/profile'}} text-decoration-none text-dark fw-bold{{/pathActive}}" href="/profile">About You</a>
+  <a class="text-decoration-none text-secondary {{#pathActive currentPath '/profile/ratings'}} text-decoration-none text-dark fw-bold {{/pathActive}}" href="/profile/ratings">Ratings</a>
 </div>
 
 
