Css bugs fixed & comments

--- a/views/commons/home.hbs
+++ b/views/commons/home.hbs
@@ -280,17 +280,17 @@
   <h2 class="text-white fs-25">Where do you want a ride to?</h2>
   <div class="card mx-auto mb-2" style="width: 90%;">
     <div class="card-body">
-      <p class="card-text">London --> Manchester</p>
+      <p class="card-text">Madrid --> Barcelona</p>
     </div>
   </div>
   <div class="card mx-auto mb-2" style="width: 90%;">
     <div class="card-body">
-      <p class="card-text">Edimburgh --> Newcastle</p>
+      <p class="card-text">Valencia --> Madrid</p>
     </div>
   </div>
   <div class="card mx-auto mb-2" style="width: 90%;">
     <div class="card-body">
-      <p class="card-text">Bristol --> London</p>
+      <p class="card-text">Sevilla --> Córdoba</p>
     </div>
   </div>
 </div>
