--- a/views/messages/inbox.hbs
+++ b/views/messages/inbox.hbs
@@ -1,6 +1,6 @@
 <div class="row mx-auto justify-content-center pt-25 mb-4" style="width: 100%;">
   <div class="col-12 col-md-4 row justify-content-center">
-     <h1 class="fs-25 mt-25">Chats</h1>
+     <h1 class="fs-25 mt-25">Inbox</h1>
   </div>
 </div>
 
